fixes #808 - Caret becomes hidden under tag

--- a/src/tagify.scss
+++ b/src/tagify.scss
@@ -531,7 +531,7 @@
             in "mix mode" the tags are inside the "input" element
         */
         #{ $self }__tag{
-            margin: 0;  // a developer can choose to have automatic horizontal margin ("1ch" advised) between tags or use manual keyboard spaces
+            margin: 0 1px;
             // line-height: 1.1;
 
             > div{
